generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model WhatsappAuth {
  key       String   @id
  value     Json
  updatedAt DateTime @updatedAt

  @@map("whatsapp_auth")
}

model User {
  id            String    @id
  name          String
  email         String    @unique
  emailVerified Boolean   @default(false)
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  accounts      Account[]
  sessions      Session[]
  profile       Profile?

  @@map("user")
}

model Account {
  id                    String    @id
  userId                String
  accountId             String
  providerId            String
  accessToken           String?
  refreshToken          String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  idToken               String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([providerId, accountId])
  @@index([userId])
  @@map("account")
}

model Session {
  id        String   @id
  userId    String
  token     String   @unique
  expiresAt DateTime
  ipAddress String?
  userAgent String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("session")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

model Profile {
  id             String        @id @default(uuid()) @db.Uuid
  userId         String?       @unique
  name           String
  token          String        @unique
  jid            String        @unique
  about          String        @default("")
  timezone       String        @default("America/Sao_Paulo")
  active         Boolean       @default(true)
  subscriptionId String        @db.Uuid
  subscription   Subscription  @relation(fields: [subscriptionId], references: [id])
  user           User?         @relation(fields: [userId], references: [id], onDelete: Cascade)
  eventSeries    EventSeries[]
  securoAccount  SecuroAccount?
  apiKeys        ApiKey[]
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt

  @@index([subscriptionId])
  @@index([userId])
  @@map("profiles")
}

model Subscription {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  price     Decimal   @db.Decimal(10, 2)
  limit     Int
  profiles  Profile[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  @@map("subscriptions")
}

model Message {
  id        String      @id @default(uuid()) @db.Uuid
  userId    String
  content   String
  type      MessageType
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt

  @@index([userId])
  @@map("messages")
}

enum MessageType {
  user
  AI
}

model EventSeries {
  id                 String           @id @default(uuid()) @db.Uuid
  profileId          String           @db.Uuid
  type               EventSeriesType
  startAt            DateTime
  recurrenceInterval Int?
  recurrenceMode     RecurrenceMode?
  active             Boolean          @default(true)
  profile            Profile          @relation(fields: [profileId], references: [id], onDelete: Cascade)
  executions         EventExecution[]
  createdAt          DateTime         @default(now())
  updatedAt          DateTime         @updatedAt

  @@index([profileId])
  @@map("event_series")
}

model EventExecution {
  id             String               @id @default(uuid()) @db.Uuid
  eventSeriesId  String               @db.Uuid
  scheduledAt    DateTime
  content        String
  status         EventExecutionStatus @default(PENDING)
  observabilitys String?
  eventSeries    EventSeries          @relation(fields: [eventSeriesId], references: [id], onDelete: Cascade)
  createdAt      DateTime             @default(now())
  updatedAt      DateTime             @updatedAt

  @@unique([eventSeriesId, scheduledAt])
  @@index([status, scheduledAt])
  @@index([eventSeriesId])
  @@map("event_executions")
}

model SecuroAccount {
  id               String              @id @default(uuid()) @db.Uuid
  profileId        String              @unique @db.Uuid
  email            String              @unique
  securoUserId     String?
  workspaceId      String?
  defaultAccountId String?
  status           SecuroAccountStatus @default(PENDING)
  observabilitys   String?
  profile          Profile             @relation(fields: [profileId], references: [id], onDelete: Cascade)
  createdAt        DateTime            @default(now())
  updatedAt        DateTime            @updatedAt

  @@map("securo_accounts")
}

model ApiKey {
  id         String    @id @default(uuid()) @db.Uuid
  profileId  String    @db.Uuid
  name       String
  prefix     String
  hash       String    @unique
  active     Boolean   @default(true)
  lastUsedAt DateTime?
  profile    Profile   @relation(fields: [profileId], references: [id], onDelete: Cascade)
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  @@index([profileId])
  @@map("api_keys")
}

enum SecuroAccountStatus {
  PENDING
  ACTIVE
  FAILED
}

enum EventSeriesType {
  UNIQUE
  RECURRENCE
}

enum RecurrenceMode {
  HOUR
  DAY
  WEEK
  MONTH
}

enum EventExecutionStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  CANCELLED
}
